Refactor of registration auth
