# apps/simple_reg_auth_server.go
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) The One True Way 2020. Apache License 2.0. The authors accept no liability, 0 nada for the use of this software.  It is offered "As IS"  Have fun with it!!
+ * Copyright (c) The One True Way 2021. Apache License 2.0. The authors accept no liability, 0 nada for the use of this software.  It is offered "As IS"  Have fun with it!!
  */
 
 package main
@@ -26,8 +26,7 @@ func main() {
 		log.Errorf("Unable to connect to NATS, exiting %s", err.Error())
 		os.Exit(2)
 	}
-	userID := pkg.GetEnvWithDefaults("USER_ID", "natssync")
-	password := pkg.GetEnvWithDefaults("SECRET", "changeit")
+	expectedAuthToken := pkg.GetEnvWithDefaults("AUTH_TOKEN", "42")
 	subj := bridgemodel.REGISTRATION_AUTH_SUBJECT
 	nc.Subscribe(subj, func(msg *nats.Msg) {
 		log.Infof("Got message %s : ", subj, msg.Reply)
@@ -35,12 +34,12 @@ func main() {
 		var resp bridgemodel.RegistrationResponse
 		err := json.Unmarshal(msg.Data, &req)
 		if err == nil {
-			resp.Success = userID == req.UserID && password == req.Secret
+			resp.Success = expectedAuthToken == req.AuthToken
 		} else {
 			resp.Success = false
 		}
 		respBits, _ := json.Marshal(&resp)
-		log.Infof("Reg Request %s from %s success=%t", req.UserID, req.LocationID, resp.Success)
+		log.Infof("Reg Request %s from %s success=%t", req.AuthToken, req.LocationID, resp.Success)
 
 		nc.Publish(msg.Reply, respBits)
 		nc.Flush()
